app-of-apps/app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
    securityContext:
      seccompProfile:
        type: RuntimeDefault
      allowPrivilegeEscalation: false
      capabilities:
        add:
          - NET_ADMIN
          - NET_RAW
        drop:
          - All
      fsGroup: 65534
      runAsUser: 65534
      runAsNonRoot: true
      containers:
        - name: app2
          image: youssefmobarak/app2-docker-java:latest
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add:
                - NET_ADMIN
                - NET_RAW
              drop:
                - All
          resources:
            limits:
              cpu: 250m
              memory: 1Gi
            requests:
              cpu: 10m
              memory: 512Mi
